<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/search_icon"
        android:title="@string/start_search_here"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/filter_by_type"
        android:title="@string/filter_by_type">
        <menu>
            <group
                android:id="@+id/group_content_type"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/item_images"
                    android:title="@string/images"/>
                <item
                    android:id="@+id/item_video"
                    android:title="@string/video" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/filter_by_size"
        android:title="@string/filter_by_size">
        <menu>
            <group
                android:id="@+id/group_content_size"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/item_size_any"
                    android:title="@string/any_size"
                    />
                <item
                    android:id="@+id/item_size_large"
                    android:title="@string/large"
                    />
                <item
                    android:id="@+id/item_size_medium"
                    android:title="@string/medium"
                    />
                <item
                    android:id="@+id/item_size_small"
                    android:title="@string/small"
                    />
                <item
                    android:id="@+id/item_size_icon"
                    android:title="@string/icon"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/filter_by_country"
        android:title="@string/filter_by_country">
        <menu>
            <group
                android:id="@+id/group_countries"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/item_country_any"
                    android:title="@string/any_country"
                    />
                <item
                    android:id="@+id/item_country_australia"
                    android:title="@string/australia"
                    />
                <item
                    android:id="@+id/item_country_germany"
                    android:title="@string/germany"
                    />
                <item
                    android:id="@+id/item_country_russia"
                    android:title="@string/russia"
                    />
                <item
                    android:id="@+id/item_country_usa"
                    android:title="@string/spain"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/filter_by_language"
        android:title="@string/filter_by_language">
        <menu>
            <group
                android:id="@+id/group_languages"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/item_language_any"
                    android:title="@string/any"
                    />
                <item
                    android:id="@+id/item_language_en"
                    android:title="@string/german"                     />
                <item
                    android:id="@+id/item_language_ru"
                    android:title="@string/russian"
                    />
                <item
                    android:id="@+id/item_language_spain"
                    android:title="@string/spanish"
                    />
            </group>
        </menu>
    </item>
</menu>